--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --secondary-color: #f5bc00;
   --light-dark-color: #595959;
   --pure-dark-color: #000000;
+  --mid-dark-color: #585656;
   --gray-color: #f2f2f2;
   --light-green-color: #e1eed7;
   --medium-green-color: #aacf8c;
@@ -17,24 +18,6 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
-}
-
-#header,
-#hero,
-#brands,
-#offer,
-#orgenic,
-#reason,
-#range,
-#order,
-#testimonial,
-#service,
-#more,
-#modern,
-#faq {
-  overflow-x: hidden !important;
-  overflow-y: hidden;
 }
 
 /* --- HEADING & PERA --- */
@@ -379,7 +362,6 @@ h6 {
   align-items: center;
 }
 
-
 .hamburger {
   display: none;
 }
@@ -393,20 +375,18 @@ h6 {
   border-radius: 4px;
 }
 
-.hamburger p{
-font-size: 12px;
-margin: 0;
-padding: 0;
-font-weight: 800;
+.hamburger p {
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  font-weight: 800;
 }
 
-
-
-.small__screen{
+.small__screen {
   display: none;
 }
-.big__screen{
-display: block;
+.big__screen {
+  display: block;
 }
 
 @media screen and (max-width: 1386px) {
@@ -424,12 +404,12 @@ display: block;
     position: relative;
   }
 
-  .small__screen{
+  .small__screen {
     display: block;
   }
-.big__screen{
-  display: none;
-}
+  .big__screen {
+    display: none;
+  }
   .navlinks,
   .login {
     position: absolute;
@@ -441,9 +421,9 @@ display: block;
     display: none;
     z-index: 99;
     padding-bottom: 40px;
-    box-shadow: 0px 25px 20px -28px rgba(0,0,0,1);
+    box-shadow: 0px 25px 20px -28px rgba(0, 0, 0, 1);
   }
-  .navlinks :last-child{
+  .navlinks :last-child {
     margin-top: 10px;
   }
 
@@ -588,40 +568,60 @@ display: block;
 /* === ORGANIC END === */
 
 /* === REASON START === */
-.reason__box {
+.row__reason{
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  grid-auto-flow: column;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 100%;
+  padding-bottom: 40px;
+}
+
+
+.reason__box{
+  display: flex;
+  align-items: center;
   background-color: var(--gray-color);
   padding: 20px;
-
+  margin: 5px;
   font-style: italic;
+  font-weight: 600;
   color: var(--primary-color);
 }
 
-.reason__box {
-  display: flex;
-  align-items: center;
+.reasn__pera p{
+display: flex;
+justify-content: end;
 }
 
-.reason__image {
-  padding-right: 30px;
+.range__image{
+  padding-right: 10px;
 }
 
-.reasn__pera {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 /* === REASON END === */
 
 /*  === RANGE START === */
+
+.row__range{
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  grid-auto-flow: column;
+  padding-bottom: 40px;
+}
+
 .range__box {
   padding-top: 20px;
 }
 .range__box p {
   font-style: italic;
-  padding-top: 5px;
-}
-.range__content p {
-  padding: 20px;
+  padding-top: 6px;
+  font-weight: 500;
 }
 /*  === RANGE END === */
 
@@ -793,6 +793,65 @@ display: block;
   color: var(--medium-green-color);
 }
 /* === FAQ END === */
+/* === FOOTER START === */
+#footer{
+  background-color: var(--mid-dark-color);
+  padding: 40px 0;
+}
+
+.top__address-box{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  
+}
+
+.top-address{
+
+  padding: 20px 100px 0 100px;
+  color: #ffffff;
+}
+
+.top-address p{
+  padding-bottom: 5px;
+}
+
+.footer__link-box{
+  padding: 40px 0 30px 0;
+}
+
+.footer__link-box a{
+  color: var(--gray-color);
+  line-height: 25px;
+  cursor: pointer;
+}
+.footer__link-box a:hover{
+  color:var(--primary-color);
+}
+.footer__link-box span{
+  color: var(--gray-color);
+  padding: 0 2px;
+
+}
+
+
+.footer__social {
+  padding: 20px 0;
+}
+
+.footer__social a{
+  margin: 0 5px ;
+  width: 1rem;
+  height: 1rem;
+}
+
+.footer__social a img{
+  width: 40px;
+  height: 40px;
+}
+
+
+/* === FOOTER END === */
 
 /* ============  {MEDIA CSS START}  =============== */
 /*Extra small devices (portrait phones, less than 576px)*/
@@ -860,6 +919,7 @@ display: block;
   /* rows */
   .container {
     width: 100%;
+    height: auto;
     margin: 0 auto;
   }
   .gol-33 {
@@ -899,7 +959,7 @@ display: block;
   }
   .reason__image {
     padding-right: 30px;
-}
+  }
   /* === ORGANIC END === */
 
   .big__heading {
@@ -928,9 +988,12 @@ display: block;
     padding-top: 20px;
   }
   /* === REASON === */
-  .reason__box {
+  .row__reason{
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: 1fr;
+  }
+  .reason__box{
     justify-content: start;
-    margin: 10px 20px;
   }
   /* === TESTIMONIAL === */
   .testimonial__images img {
@@ -952,6 +1015,18 @@ display: block;
     width: 25px;
     height: 25px;
   }
+       /* === range === */
+       .row__range{
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+      }
+      /* footer */
+      .top__address-box{
+        justify-content: start;
+      }
+      .top-address{
+        padding: 20px 0 0 40px;
+      }
 }
 
 /*Small devices (landscape phones, 576px and up)*/
@@ -1014,6 +1089,7 @@ display: block;
   /* rows */
   .container {
     width: 100%;
+    height: auto;
     margin: 0 auto;
   }
   .gol-33 {
@@ -1061,19 +1137,19 @@ display: block;
   .organic__img img {
     width: 100%;
   }
-  .reason__image {
-    padding-right: 30px;
-}
+  .reason__box{
+    justify-content: start;
+  }
   /* === ORGANIC END === */
   /* === ORDER === */
   .order__pera {
     min-height: 360px;
   }
-  /* === REASON === */
-  .reason__box {
-    justify-content: start;
-    margin: 10px 20px;
-  }
+      /* === range === */
+      .row__range{
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+      }
 
   /* === TESTIMONIAL === */
   .testimonial__images img {
@@ -1105,6 +1181,17 @@ display: block;
     width: 10px;
     height: 10px;
   }
+  .row__reason{
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: 1fr;
+  }
+        /* footer */
+        .top__address-box{
+          justify-content: start;
+        }
+        .top-address{
+          padding: 20px 0 0 50px;
+        }
 }
 
 /*Medium devices (tablets, 768px and up)*/
@@ -1162,6 +1249,7 @@ display: block;
 
   .container {
     width: 80%;
+    height: auto;
     margin: 0 auto;
   }
   .small__heading {
@@ -1207,12 +1295,7 @@ display: block;
     width: 400px;
   }
   /* === ORGANIC === */
-  .reason__image img {
-    width: 55%;
-  }
-  .reason__image {
-    padding-right: 0;
-}
+
   /* === SERVICE === */
   .services {
     margin: 20px;
@@ -1227,9 +1310,21 @@ display: block;
   }
 
   /* === REASON === */
-  .reason__box {
-    justify-content: space-between;
+  .row__reason{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    grid-auto-flow: column;
+    margin: 0 auto;
+    max-width: 100%;
+    width: 100%;
   }
+    /* === range === */
+    .row__range{
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+    }
   /* === FAQ === */
   .accordion-item {
     border-radius: 30px;
@@ -1250,6 +1345,17 @@ display: block;
     width: 70%;
   }
   /* === ORGANIC END === */
+  .reason__box{
+    justify-content: space-between;
+  }
+        /* footer */
+        .top__address-box{
+          justify-content: center;
+        }
+        .top-address{
+
+          padding: 20px 100px 0 100px;;
+        }
 }
 /*Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
@@ -1281,10 +1387,7 @@ display: block;
   .order__pera {
     min-height: 260px;
   }
-    /* === ORGANIC === */
-    .reason__image img {
-      width: 100%;
-    }
+  /* === ORGANIC === */
 }
 
 /*Extra large devices (large desktops, 1200px and up)*/
