--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 /* --- HEADING & PERA --- */
@@ -225,23 +226,6 @@ h6 {
 }
 
 /* === [ROW PADDING] === */
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
-.col {
-  flex: 0 0 100%;
-  max-width: 100%;
-  padding: 15px;
-  box-sizing: border-box;
-}
-.col-md-6 {
-  flex: 0 0 50%;
-  max-width: 50%;
-}
 
 .text-center {
   text-align: center;
@@ -637,6 +621,7 @@ justify-content: end;
   padding: 20px;
 }
 .order__pera {
+  min-height: 260px;
   padding: 20px;
   background-color: var(--gray-color);
 }
@@ -646,8 +631,10 @@ justify-content: end;
   height: 40px;
 }
 
-.order__pera {
-  min-height: 260px;
+.order__pera p{
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.5;
 }
 
 .main__heading-two h2 {
@@ -856,6 +843,12 @@ justify-content: end;
 /* ============  {MEDIA CSS START}  =============== */
 /*Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) {
+  h1{
+    font-size: 22px;
+  }
+  h2{
+    font-size: 22px;
+  }
   .p26x {
     font-size: 26px;
   }
@@ -913,9 +906,7 @@ justify-content: end;
   .row__faq {
     padding-bottom: 30px;
   }
-  .col {
-    padding: 0 10px;
-  }
+
   /* rows */
   .container {
     width: 100%;
@@ -933,15 +924,8 @@ justify-content: end;
     grid-template-rows: 1fr;
     gap: 0px 10px;
   }
-  .col-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-    gap: 10px;
-  }
-  .col-md-6 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
+
+  
   /* === BRAND === */
   .brand__items img {
     padding: 0px 3px;
@@ -1031,6 +1015,12 @@ justify-content: end;
 
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
+  h1{
+    font-size: 22px;
+  }
+  h2{
+    font-size: 22px;
+  }
   .p26x {
     font-size: 26px;
   }
@@ -1083,9 +1073,7 @@ justify-content: end;
     padding-bottom: 30px;
   }
 
-  .col {
-    padding: 0 10px;
-  }
+
   /* rows */
   .container {
     width: 100%;
@@ -1103,19 +1091,8 @@ justify-content: end;
     grid-template-rows: 1fr;
     gap: 0px 10px;
   }
-  .col-sm {
-    flex: 0 0 calc(33.33333333% - 30px);
-    max-width: calc(33.33333333% - 30px);
-  }
-  .col-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-    gap: 10px;
-  }
-  .col-md-6 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
+
+
   /* === BRAND === */
   .brand__items img {
     padding: 0px 5px;
@@ -1130,7 +1107,7 @@ justify-content: end;
 
   .offer__pera {
     padding-bottom: 16px;
-    width: 300px;
+    width: 250px;
     text-align: center;
   }
   /* === ORGANIC START === */
@@ -1196,6 +1173,12 @@ justify-content: end;
 
 /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
+  h1{
+    font-size: 26px;
+  }
+  h2{
+    font-size: 26px;
+  }
   /* === [ROW PADDING] === */
   .row__heading {
     padding-top: 50px;
@@ -1359,13 +1342,15 @@ justify-content: end;
 }
 /*Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
+  h1{
+    font-size: clamp(1.875rem, -0.4688rem + 7.5vw, 3.75rem);
+
+  }
+  h2{
+    font-size: clamp(1.6875rem, 0.3594rem + 4.25vw, 2.75rem);
+  }
   .p26x {
     font-size: 40px;
-  }
-  .col-md-4 {
-    flex: 0 0 33.33%;
-    max-width: 33.33%;
-    column-gap: 20px;
   }
   .gol-33 {
     display: grid;
